--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -7,3 +7,7 @@
   background-color: #252a31;
 }
 
+.outline {
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
