Home View and smaller improvements.

--- a/client/src/views/items/ItemDetailsDisplay.css
+++ b/client/src/views/items/ItemDetailsDisplay.css
@@ -17,3 +17,8 @@
   margin-bottom: 10px;
   white-space: pre-wrap;
 }
+
+.itemDetailsDisplay .itemFeedback {
+  display: block;
+  text-align: right;
+}
