--- a/client/src/views/stores/StoresView.css
+++ b/client/src/views/stores/StoresView.css
@@ -5,6 +5,10 @@
   overflow: hidden;
 }
 
+.storesView .storeFormView {
+  margin: 2em;
+}
+
 .storesView .buttonBar {
   display: flex;
   margin: 1em;
