--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -20,7 +20,13 @@
 
 .app .appFooter {
   flex-grow: 0;
-  background-color: lightslategray;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #363b43;
+  padding: 0.3em;
+  text-align: right;
 }
 
 .outline {
